# openai-codex

./: .gitignore
.agents/: PROTOCOL.md  architecture.md  decisions.md  state.md
.agents/workflows/: debug-cycle.md  feature-cycle.md  gitflow.md  start.md  team.md
.github/workflows/: ci.yml  close-stale-contributor-prs.yml  codespell.yml  issue-deduplicator.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  shell-tool-mcp-ci.yml  shell-tool-mcp.yml
codex-cli/: Dockerfile
codex-rs/: Cargo.toml  rust-toolchain.toml
codex-rs/tui/: Cargo.toml
frontend/: index.html  tauri-bridge.js
frontend/assets/: _baseOrderBy-24Jf3z99.js  _basePickBy-QBfaqUv7.js  _baseUniq-8AF-mK_1.js  _baseUniq-DHxk8sA7.js  _createAssigner-CjwYyU3G.js  _defineProperty-CbH1vyK1.js  abap-BCsFvNWx.js  actionscript-3-ncO6OsCP.js  ada-CFKYiL0y.js  agent-settings-BxZ5rEy6.js  am-BgfjXpU0.js  analyze_image_animation-Blx5OTwm.js  andromeeda-VhQ69Kq8.js  angular-html-SevvIA1U.js  angular-html-eZy0fXlx.js  angular-ts-BUlsM-Xx.js  apache-DIhvRkoW.js  apex-D1N5ct_c.js  apl--R0_GFoT.js  app-connect-modal-BErSvDwr.js  app-server-manager-hooks-D5F-0tTL.js  applescript-DLF8EgEc.js  ar-DtAdmAZd.js  ara-DJOZ9E7p.js  arc-D7Ft_7hM.js  architecture-U656AL7Q-C5JEvnVS.js  architectureDiagram-VXUJARFQ-BY1JH0n-.js  array-C5d_RYS0.js  arrow-top-right-eIK6j0G8.js  asciidoc-BkVHWcZO.js  asm-DARdMRrt.js  astro-CuPqOSWr.js  aurora-x-UMter6N4.js  (+566 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex_backend.rs  commands.rs  main.rs  terminal.rs
